# dusty-bot-v2

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  Procfile  README.md  fly.toml  main.py  pyproject.toml  release.sh  requirements-liccheck.txt  server.sh
.githooks/: pre-commit  pre-push
.github/workflows/: checks-ci.yml  deploy-ci.yml
migrations/: env.py
migrations/versions/: 2b85a0b06314_weekly_post_table.py  957f1a6aeb4e_weekly_post_table.py
services/: __init__.py  config.py  database.py
services/cogs/: __init__.py
services/cogs/tasks/: weekly_post.py
services/exceptions/: bot.py  cog.py
services/extensions/: __init__.py  bot.py
services/models/: weekly_post.py
services/util/: logger.py
src/: __init__.py  bot.py  config.py
src/cogs/: __init__.py  weekly_post.py
src/exceptions/: bot.py  cog.py  database.py  dusty_exception.py
src/extensions/: __init__.py  sqlalchemy.py
src/models/: mixins.py  weekly_post.py
src/util/: date_util.py  logger.py
