[tool.poetry]
name = "dusty-bot-v2"
version = "0.1.0"
description = ""
authors = ["Ky Nguyen <ngky517@gmail.com>"]
packages = [
    { include = "services" }
]

[tool.poetry.dependencies]
python = "^3.10.5"
Flask = "^2.3.2"
gunicorn = "^20.1.0"
flasgger = "^0.9.5"
marshmallow = "^3.19.0"
marshmallow-dataclass = "^8.5.14"
requests = "webargs"
webargs = "^8.2.0"
Flask-Cors = "^3.0.10"
"discord.py" = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pylint = "^2.17.4"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"
